# goSocial_app

./: .gitignore  App.js  README.md  app.json  package-lock.json  package.json  seed.js  start_demo.sh
backend/: Cargo.toml  gosocial.db
backend/src/: main.rs
src/api/: client.js  config.js  events.js  index.js  messages.js  users.js
src/components/: Avatar.js  BottomNavigation.js  ChatPopup.js  MarkerGenerator.js
src/componets/: bottomNav.js
src/context/: AuthContext.js
src/data/: events.json
src/layouts/: AppLayout.js
src/navigation/: AuthNavigator.js  RootNavigator.js  TabNavigator.js
src/screens/: ChatScreen.js  DiscoverEventScreen.js  EditProfileScreen.js  EventSummaryScreen.js  LoginScreen.js  MapScreen.js  ProfileScreen.js  RadarScreen.js  SignUpScreen.js
src/utils/: categoryStyles.js  validation.js
